# mutagent

./: .gitignore  README.md  pyproject.toml
docs/specifications/: feature-hello-world.md  feature-mutagent-mvp.md  feature-pyagent-mvp.md  feature-streaming-output.md
src/mutagent/: __init__.py  __main__.py  agent.py  base.py  client.py  essential_tools.py  main.py  messages.py  selector.py
src/mutagent/builtins/: __init__.py  agent.impl.py  claude.impl.py  inspect_module.impl.py  patch_module.impl.py  run_code.impl.py  save_module.impl.py  selector.impl.py  view_source.impl.py
src/mutagent/runtime/: __init__.py  impl_loader.py  module_manager.py
tests/: test_agent.py  test_base.py  test_basic.py  test_claude_impl.py  test_client.py  test_e2e.py  test_essential_tools.py  test_impl_loader.py  test_inplace_update.py  test_messages.py  test_module_manager.py  test_module_persistence.py  test_selector.py
