[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mutagent"
version = "0.1.0"
description = "A Python AI Agent framework for runtime self-iterating code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "tiwb"},
]
keywords = ["ai", "agent", "llm", "runtime", "hot-reload"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "forwardpy>=0.3.0",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://github.com/tiwb/mutagent"
Repository = "https://github.com/tiwb/mutagent"

[tool.setuptools.packages.find]
where = ["src"]
include = ["mutagent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
